mengubah link gambar

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- Hero Section Start -->
     <section class="hero" id="home">
       <main class="content">
-        <img src="/logo/logo.png" alt="Logo Gereja ICHTHUS LLBK" />
+        <img src="logo/logo.png" alt="Logo Gereja ICHTHUS LLBK" />
         <h1>YOH 3:16</h1>
         <blockquote>Jemaat Yesus Kristus Anak Allah Juru Selamat</blockquote>
         <a href="#" class="cta">Pelajari Selengkapnya</a>
